Done: Text decode using Win env tesseract

--- a/index.html
+++ b/index.html
@@ -14,7 +14,10 @@
 <body>
   <div class="w3-panel">
     <h1>Insert Image File</h1>
-    <input class="w3-input w3-border" type="file" name="img" id="img">
+    <div class="flex">
+      <input class="w3-input w3-border" type="file" name="img" id="img">
+      <button id="convert" class="w3-btn w3-blue">Convert</button>
+    </div>
     <br>
     <h1>Your Text</h1>
     <textarea class="w3-input w3-border" name="txt" id="txt" cols="30" rows="10"></textarea>
