--- a/index.html
+++ b/index.html
@@ -19,7 +19,14 @@
       <button id="convert" class="w3-btn w3-blue">Convert</button>
     </div>
     <br>
-    <h1>Your Text</h1>
+    <div class="flex" style="justify-content: space-between;">
+      <div>
+        <h1>Your Text</h1>
+      </div>
+      <div id="loader">
+        <img src="img/loader.gif" alt="Loading...">
+      </div>
+    </div>
     <textarea class="w3-input w3-border" name="txt" id="txt" cols="30" rows="10"></textarea>
   </div>
   <script src="./renderer.js"></script>
